package com.example.psoft_22_23_project.dashboardmanagement.model;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class RevenueData {
    private String month;
    private Double totalRevenue;
    private String year;
}