@startuml
'https://plantuml.com/class-diagram
hide circle
class DashboardRepository <<interface>>

title Class Diagram / As Product Manager or Financial director, I want to know the future cashflows for the upcoming n months filtered/broken down by plan





class RevenueData{
    - private String month;
    - private Double totalRevenue;
     -private String year;
}
class DashboardRevenueViewMapper{
    +toDashboardRevenueView(Dashboard dashboard):DashboardRevenueView
}
class DashboardController{
   getDashboardRevenue(String plan,Integer numberMonth):DashboardRevenueView
    }
class DashboardService{

 getPaymentTypeAndPlanNameCounts(String startDate,String endDate);
 getMonthlyRevenuePlan(String plan, Integer numberMonth);

}
class DisplayRevenue
{
   - String planName
    -List<RevenueData>
}

interface DashboardRepository
{
+findPaymentTypeAndPlanNameCounts( String startDate, String endDate);

}
interface PlanRepository{
+findByName_Name(String name): Optional<Plans>

}

DashboardController ..> DashboardService: uses >
DashboardService ..> DashboardRepository: uses >
DashboardRepository ..> DisplayRevenue: < record
DashboardController ..>DashboardRevenueViewMapper: uses >
DisplayRevenue ..>RevenueData:uses
DashboardService ..> PlanRepository: uses >

@enduml